--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Artificial Intelligence Representation and Reasoning 
+title: Artificial Intelligence, Representation and Reasoning
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Working Group on Artificial Intelligence, Learning Representation  and Reasoning
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -20,11 +20,12 @@ description: A virtual proof that I'm awesome
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://deanattali.com"
+  About Us: "aboutus"
+  # Projects:
+  #   - Twe
+  #   - Learn markdown: "http://www.markdowntutorial.com/"
+  Research Topics: "pages/research.md"
+  Publications: "publications/publications.md"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
