--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ navbar-links:
   #   - Twe
   #   - Learn markdown: "http://www.markdowntutorial.com/"
   Research Topics: "pages/research"
-  Publications: "publications/publications"
+  Publications: "pages/publications"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
