--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Artificial Intelligence, Representation and Reasoning
+title: AI, Representation and Reasoning
 
 # Short description of your site
 description: Working Group on Artificial Intelligence, Learning Representation  and Reasoning
@@ -26,6 +26,7 @@ navbar-links:
   #   - Learn markdown: "http://www.markdowntutorial.com/"
   Research Topics: "pages/research"
   Publications: "pages/publications"
+  Thesis Proposals: "pages/thesis"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
