--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Representation, AI and Reasoning
+title: Artificial Intelligence Research
 
 # Short description of your site
-description: Working Group on Learning Representations, Artificial Intelligence and Reasoning
+description: AIR Working Group on Artificial Intelligence
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
